[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/panel_woodWear.png" type="Texture" id=1]
[ext_resource path="res://UI/Icon/audioOff.png" type="Texture" id=2]
[ext_resource path="res://UI/Icon/musicOn.png" type="Texture" id=3]
[ext_resource path="res://UI/button_metalClose.png" type="Texture" id=4]
[ext_resource path="res://UI/Popup/Popup_Setting.gd" type="Script" id=5]

[node name="Popup_Setting" type="Popup"]
visible = true
margin_right = 461.0
margin_bottom = 320.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="T_BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="btn_Close" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -48.0
margin_bottom = 48.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_Audio" type="TextureButton" parent="."]
margin_left = 94.0
margin_top = 59.0
margin_right = 144.0
margin_bottom = 109.0
rect_min_size = Vector2( 50, 50 )
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_Music" type="TextureButton" parent="."]
margin_left = 94.0
margin_top = 133.0
margin_right = 144.0
margin_bottom = 183.0
rect_min_size = Vector2( 50, 50 )
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HS_Audio" type="HSlider" parent="."]
margin_left = 144.0
margin_top = 72.0
margin_right = 366.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HS_Music" type="HSlider" parent="."]
margin_left = 145.0
margin_top = 146.0
margin_right = 367.0
margin_bottom = 174.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="btn_Close" to="." method="_on_btn_Close_pressed"]
